@@ -26,12 +26,12 @@
  *  and may be changed from version to version or even be completely removed.
 */
 
-#include <QColor>
-#include <QObject>
-#include <QUrl>
 #if defined(WTF_USE_QT_MULTIMEDIA) && WTF_USE_QT_MULTIMEDIA
 #include <QMediaPlayer>
 #endif
+#include <QtCore/QObject>
+#include <QtCore/QUrl>
+#include <QtGui/QColor>
 
 class QWebSelectData {
 public:
